[package]
name = "socksever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
env_logger = "0.11.3"
log = "0.4.21"
url = "2.5.0"
serde_yaml = "0.9.34-deprecated"
serde = { version = "1.0.198", features = ["derive"] }
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
regex = "1.10.4"